<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.example.leticia.estagia.MainActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:src="@drawable/logo_estagia" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/txtRaCpf"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/ra_cpf_label"
        android:lines="1"
        android:layout_marginTop="22dp"
        android:textSize="15sp"
        android:ellipsize="start"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_label"
        android:lines="1"
        android:textSize="15sp"
        android:ellipsize="start"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/txtRecoverPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:gravity="center"
        android:text="@string/forgot_password_label"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button" />
    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_button" />

</LinearLayout>
