<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center">

<ImageView
    android:layout_width="fill_parent"
    android:layout_height="140dp"
    android:src="@drawable/logo_estagia" />

<TextView
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:gravity="center"
    android:text="@string/app_name"
    android:textSize="25sp"/>

<EditText
    android:id="@+id/txtRaCpf"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:hint="@string/ra_cpf_label"
    android:lines="1"
    android:layout_marginTop="22dp"
    android:textSize="15sp"
    android:ellipsize="start"
    android:gravity="center_horizontal"/>

<Button
    android:id="@+id/btnRecoverPassword"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:text="@string/recover_password_button"
    android:layout_marginTop="18dp"/>

</LinearLayout>
